--- a/project/api document3.yml
+++ b/project/api document3.yml
@@ -26,7 +26,7 @@ components:
       schema:
         type: string    
   schemas:
-    user:
+    User:
       properties:
         username:
           description: User's username
@@ -109,7 +109,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/user'
+              $ref: '#/components/schemas/User'
 
             example:
               username: testusername1
@@ -139,7 +139,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/user'
+              $ref: '#/components/schemas/User'
             example:
               username: new-testusername1
               
@@ -185,7 +185,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/user'
+              $ref: '#/components/schemas/Comment'
 
             example:
               comment_body : comment1
@@ -213,7 +213,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/user'
+              $ref: '#/components/schemas/Comment'
             example:
               title: new-food1
               
@@ -257,7 +257,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/user'
+              $ref: '#/components/schemas/Recipe'
 
             example:
               title: food1
@@ -288,7 +288,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/user'
+              $ref: '#/components/schemas/Recipe'
             example:
               title: new-food1
               
